Text align correction

--- a/src/renderer/src/entities/AltDiff/ui/AltDiff.module.scss
+++ b/src/renderer/src/entities/AltDiff/ui/AltDiff.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     height: 8%;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
     background-color: blue !important;
     border: unset !important;
 }
