--- a/src/renderer/src/entities/IoTView/ui/IoTView.module.scss
+++ b/src/renderer/src/entities/IoTView/ui/IoTView.module.scss
@@ -5,7 +5,7 @@
     height: 50%;
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
     background-color: blue !important;
     border: unset !important;
 }
